# test_ci_cd

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-single-platform.yml
